deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: gogs/gogs:latest
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gogs-data
          mountPath: /data
      volumes:
      - name: gogs-data
        persistentVolumeClaim:
          claimName: gogs-pvc
