gogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30080
  selector:
    app: gogs
