ingress-gogs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: gogs
     namespace: gogs
spec:
  ingressClassName: "nginx"
  rules:
  - host: gogs.com
    http:
     paths:
   
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs
            port: 
              number: 3000
